--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterSubscriptionContent.cshtml
@@ -2,6 +2,7 @@
 @using ODK.Core.Countries
 @using ODK.Core.Extensions
 @using ODK.Core.Members
+@using ODK.Core.Payments
 @using ODK.Services.Chapters
 @using ODK.Services.Members
 @using ODK.Web.Common.Extensions
@@ -15,7 +16,7 @@
     var dto = await ChapterService.GetChapterMemberSubscriptionsDto(memberId, Model.Chapter);
     
     var (memberSubscription, chapterSubscriptions, paymentSettings, currency) = 
-        (dto.MemberSubscription, dto.ChapterSubscriptions, dto.PaymentSettings, dto.PaymentSettings?.Currency);
+        (dto.MemberSubscription, dto.ChapterSubscriptions, dto.PaymentSettings, dto.Currency);
     
     if (memberSubscription == null)
     {
@@ -63,7 +64,7 @@
 @foreach (var chapterSubscription in chapterSubscriptions)
 {
     var modalId = $"payment-modal-{chapterSubscription.Id}";
-
+    
     <div class="mb-3">
         <div class="card">
             <div class="card-body">
@@ -72,7 +73,20 @@
                     @Html.Raw(chapterSubscription.Description)
                 </div>
                 <div>
-                    <button class="btn btn-primary mr-1" data-bs-toggle="modal" data-bs-target="#@modalId">Purchase</button>
+                    @if (Model.ChapterPaymentSettings?.Provider == PaymentProviderType.Stripe)
+                    {
+                        <a class="btn btn-primary mr-1" href="/@Model.Chapter.Name/account/subscription/@chapterSubscription.Id/checkout">
+                            Purchase
+                        </a>
+                    }
+                    else
+                    {
+                        <button class="btn btn-primary mr-1"
+                                data-bs-toggle="modal" data-bs-target="#@modalId">
+                            Purchase
+                        </button>
+                    }
+                    
                     <span>@currency.ToAmountString(chapterSubscription.Amount)</span>
                     
                     @await Html.PartialAsync("Payments/_PaymentModal", new PaymentModalViewModel
@@ -101,7 +115,7 @@
 @await Html.PartialAsync("Payments/_PaymentScripts", new PaymentScriptsViewModel
 {
     ApiPublicKey = paymentSettings?.ApiPublicKey ?? "",
-    CurrencyCode = paymentSettings?.Currency.Code ?? "",
+    CurrencyCode = currency?.Code ?? "",
     IsSubscription = false,
     Provider = paymentSettings?.Provider ?? default
 })
