--- a/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteSubscriptionContent.cshtml
@@ -2,6 +2,7 @@
 @using ODK.Core.Countries
 @using ODK.Core.Extensions
 @using ODK.Core.Members
+@using ODK.Core.Payments
 @using ODK.Core.Subscriptions
 @using ODK.Core.Utils
 @using ODK.Services.Chapters
@@ -104,9 +105,19 @@
                                     var periodUnit = price.Frequency.PeriodUnit();
 
                                     <div class="d-flex align-items-center gap-1">
-                                        <button class="btn btn-primary mr-1" data-bs-toggle="modal" data-bs-target="#@modalId">
-                                            Subscribe
-                                        </button>
+                                        @if (viewModel.PaymentSettings?.Provider == PaymentProviderType.Stripe)
+                                        {
+                                            <a class="btn btn-primary mr-1" href="/account/subscription/@price.Id/checkout">
+                                                Purchase
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <button class="btn btn-primary mr-1" data-bs-toggle="modal" data-bs-target="#@modalId">
+                                                Subscribe
+                                            </button>
+                                        }
+                                        
                                         <span>@price.Currency.ToAmountString(price.Amount)/@periodUnit</span>
                     
                                         @await Html.PartialAsync("Payments/_PaymentSubscriptionModal", new PaymentSubscriptionModalViewModel
