--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberAdminTabs.cshtml
@@ -9,6 +9,7 @@
     {
         new MenuItem { Link = OdkRoutes.MemberGroups.Member(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Subscription" },
         new MenuItem { Link = OdkRoutes.MemberGroups.MemberEvents(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Events" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.MemberPayments(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Payments" },
         new MenuItem { Link = OdkRoutes.MemberGroups.MemberConversations(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Conversations" },
         new MenuItem { Link = OdkRoutes.MemberGroups.MemberDelete(Model.Platform, Model.Chapter, Model.Member.Id), Text = "Delete" }
     };
