--- a/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_PaymentsContent.cshtml
@@ -16,18 +16,20 @@
         <tbody>
             @foreach (var dto in Model.Payments.OrderByDescending(x => x.Payment.PaidUtc))
             {
+                var payment = dto.Payment;
+
                 <tr>
                     <td>
                         <a href="@OdkRoutes.Groups.Group(Model.Platform, dto.Chapter)">@dto.Chapter.Name</a>
                     </td>
                     <td>
-                        @dto.Payment.PaidUtc.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
+                        @payment.PaidUtc.ToFriendlyDateTimeString(Model.CurrentMember.TimeZone ?? dto.Chapter.TimeZone)
                     </td>
                     <td>
-                        @dto.Payment.Currency.ToAmountString(dto.Payment.Amount)
+                        @dto.Currency.ToAmountString(payment.Amount)
                     </td>
                     <td>
-                        @dto.Payment.Reference
+                        @payment.Reference
                     </td>
                 </tr>
             }
