--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ODK.Core.Payments
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.SuperAdmin
-@model PaymentSettingsFormViewModel
+@model SitePaymentSettingsFormViewModel
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })
@@ -24,4 +24,10 @@
     @Html.LabelFor(x => x.SecretKey, new { @class = "form-label" })
     @Html.TextBoxFor(x => x.SecretKey, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.SecretKey)
+</div>
+
+<div class="form-group mb-3 required">
+    @Html.LabelFor(x => x.Commission, new { @class = "form-label" })
+    @Html.TextBoxFor(x => x.Commission, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Commission)
 </div>
