--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
@@ -40,6 +40,8 @@
         Name = Model.Subscription.Name,
         OwnerSubscription = Model.OwnerSubscription,
         PaymentSettings = Model.PaymentSettings,
+        Recurring = Model.Subscription.Recurring,
+        SupportsRecurringPayments = Model.SupportsRecurringPayments,
         Title = Model.Subscription.Title,
         Type = Model.Subscription.Type
     })
