--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -43,7 +43,8 @@
                     {
                         OwnerSubscription = Model.OwnerSubscription,
                         PaymentSettings = Model.PaymentSettings,
-                        Type = SubscriptionType.Full    
+                        SupportsRecurringPayments = Model.SupportsRecurringPayments,
+                        Type = SubscriptionType.Full
                     })
                     <button class="btn btn-primary">Create</button>
                 </form>
