--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionsContent.cshtml
@@ -54,6 +54,7 @@
                             <th>Name</th>
                             <th>Amount</th>
                             <th>Months</th>
+                            <th>Enabled</th>
                             <th></th>
                         </tr>
                         </thead>
@@ -74,6 +75,12 @@
                                     @currency?.ToAmountString(subscription.Amount)
                                 </td>
                                 <td>@subscription.Months</td>
+                                <td>
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" role="switch" disabled
+                                            checked="@(!subscription.Disabled ? "" : null)" />
+                                    </div>
+                                </td>
                                 <td>
                                     <form method="post" action="/groups/@Model.Chapter.Id/members/subscriptions/@subscription.Id/delete">
                                         <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
